tests/snapshots/integration_tests__stdlib_ConvNeXtBlock.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron ConvNeXtBlock(dim, expansion):
  inputs:
    default: [batch, dim, height, width]
  outputs:
    default: [batch, dim, height, width]
  graph:
    in -> (main, skip)
    main -> DepthwiseConv#0(dim, dim, 7, 1, 3)
    DepthwiseConv#0(dim, dim, 7, 1, 3) -> LayerNorm#1(dim)
    LayerNorm#1(dim) -> Linear#2(dim, (dim * expansion))
    Linear#2(dim, (dim * expansion)) -> GELU#3()
    GELU#3() -> Linear#4((dim * expansion), dim)
    Linear#4((dim * expansion), dim) -> processed
    (processed, skip) -> Add#5()
    Add#5() -> out
