tests/snapshots/integration_tests__stdlib_DenoisingHead.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron DenoisingHead(dim, vocab_size):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, vocab_size]
  impl:
    Source: neuroscript,diffusion/DenoisingHead
