tests/snapshots/integration_tests__stdlib_DenseConnection.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron DenseConnection(dim):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  graph:
    in -> (main, skip)
    main -> Linear#0(dim, dim)
    Linear#0(dim, dim) -> ReLU#1()
    ReLU#1() -> transformed
    (transformed, skip) -> Concat#2((0 - 1))
    Concat#2((0 - 1)) -> concatenated
    concatenated -> Linear#3((dim * 2), dim)
    Linear#3((dim * 2), dim) -> out
