tests/snapshots/integration_tests__stdlib_Expert.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Expert(dim, expansion, dropout_rate):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  graph:
    in -> Linear#0(dim, expansion)
    Linear#0(dim, expansion) -> GELU#1()
    GELU#1() -> Dropout#2(dropout_rate)
    Dropout#2(dropout_rate) -> Linear#3(expansion, dim)
    Linear#3(expansion, dim) -> out
