tests/snapshots/integration_tests__stdlib_GatedFFN.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron GatedFFN(dim, expansion, dropout_rate):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  graph:
    in -> (gate_path, value_path)
    gate_path -> Linear#0(dim, expansion)
    Linear#0(dim, expansion) -> SiLU#1()
    SiLU#1() -> gate
    value_path -> Linear#2(dim, expansion)
    Linear#2(dim, expansion) -> value
    (gate, value) -> Multiply#3()
    Multiply#3() -> combined
    combined -> Dropout#4(dropout_rate)
    Dropout#4(dropout_rate) -> regularized
    regularized -> Linear#5(expansion, dim)
    Linear#5(expansion, dim) -> out
